package netty;

option java_package = "com.exp.book.nettyauthoritative.netty.proto";
option java_outer_classname = "SubscribeRequestProto";

message SubscribeRequest {
  required int32 subId = 1;
  required string username = 2;
  required string product = 3;
  required string address = 4;
}

